--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -8,9 +8,8 @@ body{
 .nav-link{
   font-family: "Lexend", sans-serif;
   font-optical-sizing: auto;
-  font-style: normal;
-  font-weight: 400;
-
+  color: white;
+  font-weight:bold;
 }
 .head-name{
   letter-spacing: 1px;
@@ -21,7 +20,7 @@ body{
 }
 .pro-img{
   border-radius: 20px;
-  box-shadow: 2px 1px 4px black;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
 .head-content{
   letter-spacing: 1.5px;
