--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -1,5 +1,12 @@
 body{
   margin: 0;
+  /* background-color: #AD5F7B; */
+}
+.navbar{
+  background: #fa1679;
+  background: radial-gradient(circle,rgb(244, 114, 170) 0%, rgba(148, 187, 233, 1) 100%);
+  height: 15vh;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 .navbar-brand{
   font-family: "Dancing Script", cursive;
@@ -8,8 +15,13 @@ body{
 .nav-link{
   font-family: "Lexend", sans-serif;
   font-optical-sizing: auto;
-  color: white;
+  color: #ad5f7b;
   font-weight:bold;
+}
+.nav-link:hover{
+  margin: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
 }
 .head-name{
   letter-spacing: 1px;
