--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -6,7 +6,7 @@ body{
   background: #fa1679;
   background: radial-gradient(circle,rgb(244, 114, 170) 0%, rgba(148, 187, 233, 1) 100%);
   height: 15vh;
-  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .navbar-brand{
   font-family: "Dancing Script", cursive;
