--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -1,10 +1,15 @@
+html {
+  scroll-padding-top: 80px; /* Adjust this value to match your navbar height */
+  scroll-behavior: smooth;
+}
 body{
   margin: 0;
   /* background-color: #AD5F7B; */
 }
 .navbar{
-  background: #fa1679;
-  background: radial-gradient(circle,rgb(244, 114, 170) 0%, rgba(148, 187, 233, 1) 100%);
+  /* background: #fa1679; */
+  /* background-color: #696969; */
+  background: radial-gradient(circle,#696969 0%, #A9A9A9 100%);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .navbar-brand{
@@ -39,13 +44,13 @@ body{
 .body-cont-head{
   font-family: "Afacad", sans-serif;
 }
+
 .about-head{
   text-shadow: 1px 0 1px black;
 }
 .about-content{
-  font-weight: 300;
+  font-weight: 500;
   text-align: justify;
-  letter-spacing: 1px;
   font-family: "Josefin Sans", sans-serif;
 }
 .list-group{
@@ -65,5 +70,13 @@ body{
 }
 .img-fluid{
   border-radius: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
+  box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
 }
