--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -68,11 +68,12 @@ body{
   box-shadow: 1px 0 0.5px black;
 }
 .list-group .list-group-item:hover{
-  transform: scale(1.1);
+  transform: scale(1.2);
   box-shadow: 0 0 2px black;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease-in-out;
   color:white;
-  background-color:#696969;
+  /* background-color:#696969; */
+  background: radial-gradient(circle,#696969 0%, #A9A9A9 100%);
 
 }
 .img-fluid{
