--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -3,91 +3,100 @@ html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
-body{
+body {
   margin: 0;
   overflow-x: hidden;
   /* background-color: #AD5F7B; */
   /* margin: 100px; */
 }
-.navbar{
+.navbar {
   /* background: #fa1679; */
   /* background-color: #696969; */
-  background: radial-gradient(circle,#696969 0%, #A9A9A9 100%);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background: radial-gradient(circle, #696969 0%, #a9a9a9 100%);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
-.navbar-brand{
+.navbar-brand {
   font-family: "Dancing Script", cursive;
   font-weight: 500;
 }
-.nav-link{
+.nav-link {
   font-family: "Lexend", sans-serif;
   font-optical-sizing: auto;
   color: #ad5f7b;
-  font-weight:bold;
+  font-weight: bold;
 }
-.head-name{
+.nav-link:hover {
+  color: black;
+}
+.head-name {
   letter-spacing: 1px;
   font-family: "Vollkorn", serif;
 }
 
-#home{
+#home {
   height: 75vh;
-  background: linear-gradient(to bottom, white, #DCDCDC);
+  /* background: linear-gradient(to bottom, white, #DCDCDC); */
+  background: linear-gradient(to bottom, white, #696969, #dcdcdc);
+  height: 100vh;
+  /* background-image: url(https://cdn.pixabay.com/photo/2025/07/11/16/38/landscape-9709190_1280.jpg); */
+  /* background: radial-gradient(to bottom,#696969 0%, #A9A9A9 100%); */
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.over{
+.over {
   font-family: "Aclonica", sans-serif;
 }
-.pro-img{
+.pro-img {
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
-.head-content{
+.head-content {
   letter-spacing: 1.5px;
   text-shadow: 1px 0 1px black;
 }
-.body-cont{
+.body-cont {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 300;
 }
-.body-cont-head{
+.body-cont-head {
   font-family: "Afacad", sans-serif;
 }
 
-.about-head{
+.about-head {
   text-shadow: 1px 0 1px black;
 }
-.about-content{
+.about-content {
   font-weight: 500;
   text-align: justify;
   font-family: "Josefin Sans", sans-serif;
 }
-.list-group{
-  margin-left:4vw ;
+.list-group {
+  margin-left: 4vw;
 }
-.list-group .list-group-item{
+.list-group .list-group-item {
   width: 180px;
   margin: 5px;
   border: 1px solid black;
   box-shadow: 1px 0 0.5px black;
 }
-.list-group .list-group-item:hover{
+.list-group .list-group-item:hover {
   transform: scale(1.2);
   box-shadow: 0 0 2px black;
   transition: all 0.1s ease-in-out;
-  color:white;
+  color: white;
   /* background-color:#696969; */
-  background: radial-gradient(circle,#696969 0%, #A9A9A9 100%);
-
+  background: radial-gradient(circle, #696969 0%, #a9a9a9 100%);
 }
-.img-fluid{
+.img-fluid {
   border-radius: 10px;
   /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-  box-shadow:
-  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-  0 12.5px 10px rgba(0, 0, 0, 0.06),
-  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-  0 100px 80px rgba(0, 0, 0, 0.12)
-;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+.lead {
+  text-align: justify;
 }
