--- a/John_Portfolio.css
+++ b/John_Portfolio.css
@@ -1,7 +1,7 @@
 html {
   scroll-padding-top: 80px; /* Adjust this value to match your navbar height */
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 body {
   margin: 0;
@@ -101,6 +101,9 @@ body {
   text-align: justify;
 }
 @media (max-width: 600px) {
+  html{
+    overflow-x: hidden;
+  }
   .lead {
     padding: 20px 10px;
     margin: 10px 20px 20px;
@@ -110,7 +113,7 @@ body {
     font-weight:bolder;
     font-style: normal;
     /* border: 1px solid black; */
-    border-radius: 10%;
+    border-radius: 5px;
     background-color:#d4d4d4;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
